objects/nFORCE__View__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Edit__c</fullName>
        <description>This field is currently not used, but is reserved for future use.</description>
        <inlineHelpText>Edit the contents of this field using the WSYIWYG editor built into the Screen View object page. Do not cut-and-paste text into this field from another editor. Do not copy text from the read-only view of the page into the edit view.</inlineHelpText>
        <label>Edit</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__Preview__c</fullName>
        <description>This field is currently not used, but is reserved for future use.</description>
        <inlineHelpText>Edit the contents of this field using the WSYIWYG editor built into the Screen View object page. Do not cut-and-paste text into this field from another editor. Do not copy text from the read-only view of the page into the edit view.</inlineHelpText>
        <label>Preview</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__Read_Only__c</fullName>
        <description>This field is required for this record. It is automatically populated by the layout builder via trigger, but can also be manually populated. This field is used to generate the apperance and data in the screen section via HTML and Knockout binders.</description>
        <inlineHelpText>Edit the contents of this field using the WSYIWYG editor built into the Screen View object page. Do not cut-and-paste text into this field from another editor. Do not copy text from the read-only view of the page into the edit view.</inlineHelpText>
        <label>Read Only</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Screen View</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VIEW-{000000000}</displayFormat>
        <label>View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screen Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>